# xc-hwbp-debugger

./: .gitignore  CMakeLists.txt  README.md  main.cpp  protocol.hpp
.github/workflows/: build.yml
agent/: CMakeLists.txt
agent/src/: main.cpp
cmake/: patch_eui_neo.cmake
docs/superpowers/plans/: 2026-06-11-xc-hwbp-debugger.md
docs/superpowers/specs/: 2026-06-11-xc-hwbp-debugger-design.md
mcp-server/: CMakeLists.txt
mcp-server/include/xc/: mcp_core.hpp
mcp-server/src/: main.cpp  mcp_core.cpp
pc-client/: CMakeLists.txt
pc-client/src/: main.cpp
shared/include/xc/: protocol.hpp
tests/: CMakeLists.txt  agent_contract_tests.cpp  mcp_contract_tests.cpp  protocol_tests.cpp  ui_contract_tests.cpp
